--- a/roboshop-shell/roboshop.config
+++ b/roboshop-shell/roboshop.config
@@ -4,9 +4,9 @@ location /images/ {
   root   /usr/share/nginx/html;
   try_files $uri /images/placeholder.jpg;
 }
-location /api/catalogue/ { proxy_pass http://localhost:8080/; }
-location /api/user/ { proxy_pass http://localhost:8080/; }
-location /api/cart/ { proxy_pass http://localhost:8080/; }
+location /api/catalogue/ { proxy_pass http://172.31.93.205:8080/; }
+location /api/user/ { proxy_pass http://172.31.82.72:8080/; }
+location /api/cart/ { proxy_pass http://172.31.88.42:8080/; }
 location /api/shipping/ { proxy_pass http://localhost:8080/; }
 location /api/payment/ { proxy_pass http://localhost:8080/; }
 
